--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div class="card">
-        <h1>Bussiness Development</h1>
+        <div class="heading">
+            <h1>Bussiness Development</h1>
+        </div>
         <p>Have an idea or inquiry for Waze business development?</p>
         <button class="btn">Share your ideas</button>
     </div>
