--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="card-3">
         <img src="img/3.jpg" class="card-3-img" alt="">
         <div class="padding-3">
-            <p> <img src="" alt="">SUBSRIBE TO ANY PLAN</p>
+            <p > <img src="img/lock_FILL0_wght400_GRAD0_opsz24.png"alt="">SUBSRIBE TO ANY PLAN</p>
             <h1>Get more features in Google photos</h1>
             <p>Bring your favorite moments to life with more Google Photos editing tools for Android and iOS, including Magic Eraser. Subject to eligibility.</p>
             <button class="btn-3">View details</button>
@@ -44,8 +44,8 @@
             <h2>flodesk</h2>
             <p>Welcome back</p>
         </div>      
-        <input class="input" type="text" placeholder="Enter Email">
-        <input class="input" type="password" placeholder="Enter Password">
+        <input class="input" type="text" placeholder="Enter your email">
+        <input class="input" type="password" placeholder="Enter your Password">
         <div class="btn-4">
             <button class="btn-dark">Log in to Flodesk</button>
         </div>
