--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
     <div class="card-4">
         <div class="center">
-            <h2>flodesk</h2>
-            <p>Welcome back</p>
+            <h1>flodesk</h1>
+            <p>Welcome back!</p>
         </div>      
         <input class="input" type="text" placeholder="Enter your email">
         <input class="input" type="password" placeholder="Enter your Password">
