--- a/index.html
+++ b/index.html
@@ -4,58 +4,74 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>assignment day 1</title>
+    <title>Document</title>
 </head>
 <body>
-    <div class="card">
-        <div class="heading">
-            <h1>Bussiness Development</h1>
-        </div>
-        <p>Have an idea or inquiry for Waze business development?</p>
-        <button class="btn">Share your ideas</button>
+    <!-- assignment -1 -->
+    <div class="assignment">
+        <h2>Assignment 1</h2>
     </div>
-
-    <div class="card-2">   
-        <div class="padding">
-            <h2>Your profiles</h2>
-            <p>See how your different profiles appear in Google services</p>
-            <div class="padding-img">
-                <img src="img/1.png" class="card-img" alt="">
-                <img src="img/2.png" class="card-img" alt="">
-            </div>  
-        </div>
-        <div class="border">
-            <p>See profiles</p>
-        </div>
-    </div>
-
-    <div class="card-3">
-        <img src="img/3.jpg" class="card-3-img" alt="">
-        <div class="padding-3">
-            <p > <img src="img/lock_FILL0_wght400_GRAD0_opsz24.png"alt="">SUBSRIBE TO ANY PLAN</p>
-            <h1>Get more features in Google photos</h1>
-            <p>Bring your favorite moments to life with more Google Photos editing tools for Android and iOS, including Magic Eraser. Subject to eligibility.</p>
-            <button class="btn-3">View details</button>
-        </div>
-    </div>
-
-    <div class="card-4">
-        <div class="center">
-            <h1>flodesk</h1>
-            <p>Welcome back!</p>
-        </div>      
-        <input class="input" type="text" placeholder="Enter your email">
-        <input class="input" type="password" placeholder="Enter your Password">
-        <div class="btn-4">
-            <button class="btn-dark">Log in to Flodesk</button>
-        </div>
-        <div class="center">
-            <p>Not a member? <a href="">Sign Up</a></p>
-            <a href="">Forget your Password?</a>
-            <p>By continuing . you agree to Flodesk's <a href="">terms</a> and acknowledge you've read our <a href="">privacy policy</a></p>
-        </div>
-    </div>
-
     
+   <div class="card-1">
+    <div class="card-1-header">
+        <img src="https://source.unsplash.com/1600x1000/?food" class="card-1-img" alt="">
+        <div class="promotion">promoted</div>
+        <div class="offer">50% OFF up  to 100</div>
+        <div class="minute">38 min</div>
+    </div> 
+    <h2>Center Point Resaurant</h2>
+    <p>North indian, Chinese</p>
+    <div class="card-1-border">
+        <p>Follows all Max Safety measures to ensure your food is safe</p>
+    </div>
+   </div>
+
+
+   <!-- assignment  2 -->
+    <div class="assignment">
+    <h2>Assignment 2</h2>
+    </div>
+    <div class="bg-1">
+        <img src="https://source.unsplash.com/1600x1000/?bali" class="bg-1-img" alt="">
+        <div class="bg-1-content">
+            <h1>Explore the diversity in Bali</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo labore voluptatibus ut harum ipsum! Omnis, vel?</p>
+            <button class="btn-light">Explore Now</button>
+        </div>
+    </div>
+
+    <!-- assignment  3 -->
+    <div class="assignment">
+        <h2>Assignment 3</h2>
+    </div>
+        <div class="bg-2">
+            <img src="https://source.unsplash.com/1600x700/?food" class="bg-2-img" alt="">
+            <div class="bg-2-content">
+                <h1>ZOMATO</h1>
+                <p>Discover the best food & drinks in Lucknow</p>
+                <div class="row">
+                    <input type="text" name="" id="" class="zomato-text" placeholder="Search for restaurant,cuisine or a dish">
+                </div>
+                
+            </div>
+        </div>
+
+
+    <!-- assignment  4-->
+        <div class="assignment">
+            <h2>Assignment 4</h2>
+        </div>
+
+        <div class="card-4">
+            <div class="profile">
+                <img src="https://source.unsplash.com/1800x600/?mountains" class="bg-img" alt="">
+                <img src="https://source.unsplash.com/400x400/?man" class="user-img" alt=""> 
+            </div>
+            <div class="profile-details">
+                <h1>Ashish Shukla</h1>
+                <p>Founder &CEO at Codekaro</p>
+            </div>
+        </div>
+
 </body>
 </html>
